building tailwind css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ajay Sharma - Developer Profile</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,7 +31,7 @@
       </header>
       <main class="grid grid-cols-1 lg:grid-cols-3 gap-8">
         <!-- Left Column: Profile & Contact -->
-        <div class="lg:col-span-1 space-y-8">
+        <div class="lg:col-span-1 space-y-8 content-col">
           <section id="personal-info-card" class="glass-card p-8 text-center">
             <!-- Personal info will be injected here -->
           </section>
@@ -64,7 +63,7 @@
         </div>
 
         <!-- Right Column: Experience -->
-        <div class="lg:col-span-2 space-y-8">
+        <div class="lg:col-span-2 space-y-8 content-col">
           <section class="glass-card p-8">
             <h2 class="text-3xl font-semibold text-white mb-6">Experience</h2>
             <div
