--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QVC9GKDXG0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QVC9GKDXG0");
+    </script>
   </head>
   <body class="text-gray-200">
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
